--- a/dev/integration/tests/basic_agent/directline/SendStreamActivity_SendStreamMessage_ExpectStreamResponses.yaml
+++ b/dev/integration/tests/basic_agent/directline/SendStreamActivity_SendStreamMessage_ExpectStreamResponses.yaml
@@ -2,19 +2,19 @@ test:
 - type: input
   activity:
     type: message
-    id: activityEvS8
+    id: activity-stream-001
     timestamp: '2025-06-18T18:47:46.000Z'
     localTimestamp: '2025-06-18T11:47:46.000-07:00'
     localTimezone: America/Los_Angeles
-    channelId: msteams
+    channelId: directline
     from:
       id: user1
       name: ''
     conversation:
-      id: conv1
+      id: conversation-stream-001
     recipient:
-      id: claire-bot@sometext
-      name: claire-bot
+      id: basic-agent@sometext
+      name: basic-agent
     textFormat: plain
     locale: en-US
     text: stream
@@ -25,5 +25,5 @@ test:
       supportsListening: true
       supportsTts: true
     channelData:
-      clientActivityID: activityAZ8
+      clientActivityID: client-activity-stream-001
 - type: skip
