Adding executor and CLI unit tests

--- a/dev/microsoft-agents-testing/pytest.ini
+++ b/dev/microsoft-agents-testing/pytest.ini
@@ -12,6 +12,7 @@ filterwarnings =
     ignore::PendingDeprecationWarning
     # pytest-asyncio warnings that are safe to ignore
     ignore:.*deprecated.*asyncio.*:DeprecationWarning:pytest_asyncio.*
+    ignore:pytest.PytestUnraisableExceptionWarning
 
 # Test discovery configuration
 testpaths = tests
