Updating old tests

--- a/dev/tests/pytest.ini
+++ b/dev/tests/pytest.ini
@@ -7,7 +7,7 @@ filterwarnings =
     ignore::aiohttp.web.NotAppKeyWarning
 
 # Test discovery configuration
-testpaths = tests
+testpaths = ./
 python_files = test_*.py *_test.py
 python_classes = Test*
 python_functions = test_*
