--- a/test_samples/copilot_studio_connector/env.TEMPLATE
+++ b/test_samples/copilot_studio_connector/env.TEMPLATE
@@ -1,29 +1,25 @@
+# Service Connection Settings
 CONNECTIONS__SERVICE_CONNECTION__SETTINGS__CLIENTID=client-id
 CONNECTIONS__SERVICE_CONNECTION__SETTINGS__CLIENTSECRET=client-secret
 CONNECTIONS__SERVICE_CONNECTION__SETTINGS__TENANTID=tenant-id
- 
-CONNECTIONS__MCS__SETTINGS__CLIENTID=client-id
-CONNECTIONS__MCS__SETTINGS__CLIENTSECRET=client-secret
-CONNECTIONS__MCS__SETTINGS__TENANTID=tenant-id
- 
-AGENTAPPLICATION__USERAUTHORIZATION__HANDLERS__GRAPH__SETTINGS__AZUREBOTOAUTHCONNECTIONNAME=connection-name
-AGENTAPPLICATION__USERAUTHORIZATION__HANDLERS__GRAPH__SETTINGS__OBOCONNECTIONNAME=connection-name
-AGENTAPPLICATION__USERAUTHORIZATION__HANDLERS__GITHUB__SETTINGS__AZUREBOTOAUTHCONNECTIONNAME=connection-name
-AGENTAPPLICATION__USERAUTHORIZATION__HANDLERS__GITHUB__SETTINGS__OBOCONNECTIONNAME=connection-name
-AGENTAPPLICATION__USERAUTHORIZATION__HANDLERS__MCS__SETTINGS__AZUREBOTOAUTHCONNECTIONNAME=connection-name
-AGENTAPPLICATION__USERAUTHORIZATION__HANDLERS__MCS__SETTINGS__OBOCONNECTIONNAME=connection-name
- 
-COPILOTSTUDIOAGENT__ENVIRONMENTID=environment-id
-COPILOTSTUDIOAGENT__SCHEMANAME=schema-name
-COPILOTSTUDIOAGENT__TENANTID=tenant-id
-COPILOTSTUDIOAGENT__AGENTAPPID=agent-app-id
 
-# Proactive messaging sample settings
-PROACTIVEMESSAGING__BOTID=28:teams-app-id
-PROACTIVEMESSAGING__AGENTID=teams-app-id
-PROACTIVEMESSAGING__TENANTID=tenant-id
-PROACTIVEMESSAGING__SCOPE=https://api.botframework.com/.default
-PROACTIVEMESSAGING__CHANNELID=msteams
-PROACTIVEMESSAGING__SERVICEURL=https://smba.trafficmanager.net/teams/
-# Optional default user (if not supplied per request)
-PROACTIVEMESSAGING__USERAADOBJECTID=
+# Graph Connection Settings (for OBO token exchange)
+CONNECTIONS__GRAPHCONNECTION__SETTINGS__CLIENTID=client-id
+CONNECTIONS__GRAPHCONNECTION__SETTINGS__CLIENTSECRET=client-secret
+CONNECTIONS__GRAPHCONNECTION__SETTINGS__TENANTID=tenant-id
+CONNECTIONS__GRAPHCONNECTION__SETTINGS__SCOPES=https://graph.microsoft.com/.default
+
+# Token Validation Settings
+TOKENVALIDATION__ENABLED=true
+TOKENVALIDATION__AUDIENCES=client-id
+TOKENVALIDATION__TENANTID=tenant-id
+
+# User Authorization Handler for Connector
+AGENTAPPLICATION__USERAUTHORIZATION__HANDLERS__CONNECTOR__TYPE=ConnectorUserAuthorization
+AGENTAPPLICATION__USERAUTHORIZATION__HANDLERS__CONNECTOR__SETTINGS__NAME=connector
+AGENTAPPLICATION__USERAUTHORIZATION__HANDLERS__CONNECTOR__SETTINGS__OBOCONNECTIONNAME=GraphConnection
+AGENTAPPLICATION__USERAUTHORIZATION__HANDLERS__CONNECTOR__SETTINGS__SCOPES=https://graph.microsoft.com/.default
+
+# Server Settings (optional)
+HOST=localhost
+PORT=3978
