--- a/test_samples/copilot_studio_connector/requirements.txt
+++ b/test_samples/copilot_studio_connector/requirements.txt
@@ -2,5 +2,5 @@ microsoft-agents-activity
 microsoft-agents-hosting-aiohttp
 microsoft-agents-hosting-core
 microsoft-agents-authentication-msal
-microsoft-agents-storage-blob
 aiohttp
+python-dotenv
