Bug fix for aiohttp scenario and provided more tests

--- a/dev/microsoft-agents-testing/pytest.ini
+++ b/dev/microsoft-agents-testing/pytest.ini
@@ -13,6 +13,7 @@ filterwarnings =
     # pytest-asyncio warnings that are safe to ignore
     ignore:.*deprecated.*asyncio.*:DeprecationWarning:pytest_asyncio.*
     ignore:pytest.PytestUnraisableExceptionWarning
+    ignore::aiohttp.web_exceptions.NotAppKeyWarning
 
 # Test discovery configuration
 testpaths = tests
