--- a/dev/microsoft-agents-testing/pyproject.toml
+++ b/dev/microsoft-agents-testing/pyproject.toml
@@ -26,3 +26,6 @@ classifiers = [
 
 [project.scripts]
 agt = "microsoft_agents.testing.cli:main"
+
+[project.entry-points.pytest11]
+agent_test = "microsoft_agents.testing.pytest_plugin"
