Redoing test cases

--- a/dev/microsoft-agents-testing/pytest.ini
+++ b/dev/microsoft-agents-testing/pytest.ini
@@ -14,6 +14,7 @@ filterwarnings =
     ignore:.*deprecated.*asyncio.*:DeprecationWarning:pytest_asyncio.*
     ignore:pytest.PytestUnraisableExceptionWarning
     ignore::aiohttp.web_exceptions.NotAppKeyWarning
+    ignore::ResourceWarning
 
 # Test discovery configuration
 testpaths = tests
