--- a/dev/microsoft-agents-testing/pytest.ini
+++ b/dev/microsoft-agents-testing/pytest.ini
@@ -41,3 +41,4 @@ markers =
     slow: Slow tests that may take longer to run
     requires_network: Tests that require network access
     requires_auth: Tests that require authentication
+    failure_demo: Intentionally failing tests for assertion/transcript formatting review
